...
            )
            .contentMargins(
                .top,
                TopBoxLayout.verticalContentMargin,
                for: .scrollContent
            )
//            .navigationTitle("Accounts")
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    Button {
                        showingAddAccount = true
                    } label: {
                        Image(systemName: "plus")
...
